[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/SpatialAccessibility"]
[project]
name = "SpatialAccessibility"
version = "0.0.1"
authors = [
  { name="Shiqi Wang", email="qtec@outlook.com" },
]
description = "A Spatial Accessibility Calculation package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/wsqstar/SpatialAccessibility"
Issues = "https://github.com/wsqstar/SpatialAccessibility/issues"